<resources>

    <string name="app_name">CustomTextView</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
	<string name="Roboto_Regular">"Roboto-Regular.ttf"</string>
	<string name="Roboto_Bold">"Roboto-Bold.ttf"</string>
	<string name="Roboto_BoldItalic">"Roboto-BoldItalic.ttf"</string>
	<string name="Roboto_Italic">"Roboto-Italic.ttf"</string>
	
</resources>