<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.adb.custom.text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >

    <com.adb.custom.text.DroidTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:customFont="@string/Roboto_Regular"
        android:textSize="20sp"
        android:text="@string/hello_world"
        tools:context=".MainActivity"
        />
    
     <com.adb.custom.text.DroidTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:customFont="@string/Roboto_Bold"
        android:textSize="20sp"
        android:text="@string/hello_world"
        tools:context=".MainActivity"
        />
     
      <com.adb.custom.text.DroidTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:customFont="@string/Roboto_BoldItalic"
        android:textSize="20sp"
        android:text="@string/hello_world"
        tools:context=".MainActivity"
        />
      
       <com.adb.custom.text.DroidTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:customFont="@string/Roboto_Italic"
        android:textSize="20sp"
        android:text="@string/hello_world"
        tools:context=".MainActivity"
        />
       
      

</LinearLayout>
